# Gomoku

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  launchLiskvork.sh  test_mcts.sh
.github/workflows/: my_cpp_action.yml
bonus/back-ai/: Makefile
bonus/back-ai/src/: IAI.cpp
bonus/defensive/src/: Defensive.cpp
bonus/random-ai/: Makefile
bonus/random-ai/src/: IAI.cpp
include/: GameManager.hpp  Gomoku.hpp  IAI.hpp  MonteCarlo.hpp  MonteCarloDebug.hpp  MonteCarloFuturThreat.hpp  MonteCarloThread.hpp  MonteCarloThreat.hpp  Pos.hpp
src/: BoardManager.cpp  Pos.cpp  SplitString.cpp  main.cpp
src/ai/: GetMonteCarloResult.cpp  HandleCriticalPlay.cpp  IAI.cpp  MonteCarlo.cpp  MonteCarloDebug.cpp  MonteCarloFuturThreat.cpp  MonteCarloThread.cpp  MonteCarloThreat.cpp
src/cmd/: handle_about.cpp  handle_begin.cpp  handle_board.cpp  handle_end.cpp  handle_info.cpp  handle_start.cpp  handle_turn.cpp
tests/: tests.cpp
